Issue #983: Add support to Windows CommandLines using SSH
* Adapted OsCommandService to handle Windows file transfer.
* Added Unit tests.
* Tested the updates on WindowsFile with an SSH configuration.
* Updated all the impacted runSshCommand method calls accordingly.
* Tested LinuxFile to make sure no regression has be inserted.