@@ -96,12 +96,7 @@ public class CommandLineSourceProcessor {
 			return SourceTable
 				.builder()
 				.rawData(selectedColumnsLines.stream().collect(Collectors.joining(NEW_LINE)))
-				.table(
-					selectedColumnsLines
-						.stream()
-						.map(line -> Stream.of(line.split(TABLE_SEP)).collect(Collectors.toList()))
-						.collect(Collectors.toList())
-				)
+				.table(selectedColumnsLines.stream().map(line -> Stream.of(line.split(TABLE_SEP)).toList()).toList())
 				.build();
 		} catch (Exception e) {
 			LoggingHelper.logSourceError(
